#2 created endpoints for major, student, sex, status and updated swagger.json
